--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 			<version>1.9.3</version>
 		</dependency>
 
-
+		
 		<!-- bootstrap and jquery -->
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -93,6 +93,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4-1201-jdbc4</version>
 		</dependency>
 	</dependencies>
 
