--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,14 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postqresql</artifactId>
+			<version>9.4-1201-jdbc4</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
